# finAgent_Sufe

./: .gitignore  agent.py  app.py  financial_agent_demo.ipynb  pyproject.toml  requirements.txt
.claude/: settings.json
tools/: __init__.py  state.py
tools/data/: low_freq.py
tools/portfolio/: markowitz.py
tools/risk/: __init__.py
