[project]
name = "agentdev"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "akshare>=1.18.64",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.3.2",
    "langchain-deepseek>=1.0.1",
    "langchain-tavily>=0.2.18",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "openai>=2.38.0",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
    "streamlit>=1.58.0",
    "yfinance>=1.4.1",
]
